# Sparki-Tower-Defense

./: .gitignore  README.md  start.sh
ROS Workspace/src/ai/: package.xml
ROSWorkspace/src/: config.py  game.py  helper.py  main.py  pose.py  sparki-ros.py  sparki.py  world.py
ROSWorkspace/src/ai/: CMakeLists.txt  package.xml
ROSWorkspace/src/ai/scripts/: main.py  sparki.py  world.py
ROSWorkspace/src/game/: CMakeLists.txt  package.xml
ROSWorkspace/src/game/scripts/: config.py  helper.py  main.py  sparki.py
ROSWorkspace/test/: test-world.py
Unity Project/: .gitignore
Unity Project/Assets/Prefabs/: Laser Tower.prefab
Unity Project/Assets/Resources/: VuforiaConfiguration.asset
Unity Project/Assets/Scenes/: SampleScene.unity
Unity Project/Assets/Scripts/: TowerController.cs
Unity Project/Assets/Shaders/: TransparentShadowCollector.shader
Unity Project/ProjectSettings/: TagManager.asset
Unity Project/QCAR/: somedata16
UnityProject/Assets/Materials/: Bradley.mat  Temporary Sparki.mat  Transparent Shadow Collector.mat
UnityProject/Assets/Prefabs/: Damage Particles.prefab  Explosion.prefab  Grid Line.prefab  Laser Tower.prefab
UnityProject/Assets/Resources/: VuforiaConfiguration.asset
UnityProject/Assets/Scenes/: Main.unity
UnityProject/Assets/Scripts/: Base.cs  Controller.cs  GridController.cs  ROS.cs  Sparki.cs  Suicide.cs  TowerController.cs  UIController.cs
UnityProject/ProjectSettings/: ProjectSettings.asset  TagManager.asset
UnityProject/QCAR/: somedata16
sparki-ros/: sparki-ros.ino
(+11 files in other folders)
